Create branch 14
- Update to Java 21
- Update to Kotlin 2.1.0
- Update to IntelliJ >= 2024.3.2