@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2010, 2023 BSI Business Systems Integration AG
+ * Copyright (c) 2010, 2025 BSI Business Systems Integration AG
  *
  * This program and the accompanying materials are made
  * available under the terms of the Eclipse Public License 2.0
@@ -202,7 +202,7 @@ public class StructuredType implements IStructuredType {
             return reference;
           }
         }
-        return references.get(references.size() - 1);
+        return references.getLast();
       }
       var sibling = getSibling(cat);
       if (sibling != null) {
@@ -222,7 +222,7 @@ public class StructuredType implements IStructuredType {
       if (search) {
         var elements = getElementsInternal(methodCategory);
         if (elements != null && !elements.isEmpty()) {
-          return elements.get(0);
+          return elements.getFirst();
         }
       }
       else if (methodCategory == category) {
