@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2010, 2023 BSI Business Systems Integration AG
+ * Copyright (c) 2010, 2025 BSI Business Systems Integration AG
  *
  * This program and the accompanying materials are made
  * available under the terms of the Eclipse Public License 2.0
@@ -150,7 +150,7 @@ public class CodeTypeNewWizardPage extends AbstractCompilationUnitNewWizardPage 
             typeContentProvider.setBaseClassFqn(null);
           }
           else {
-            typeContentProvider.setBaseClassFqn(bounds.get(0).name());
+            typeContentProvider.setBaseClassFqn(bounds.getFirst().name());
           }
         }
       }
