@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2010, 2023 BSI Business Systems Integration AG
+ * Copyright (c) 2010, 2025 BSI Business Systems Integration AG
  *
  * This program and the accompanying materials are made
  * available under the terms of the Eclipse Public License 2.0
@@ -35,7 +35,7 @@ public class ExtensionProposal extends AbstractTypeProposal {
     var createdExtension = createExtensionType(superType);
 
     List<BodyDeclaration> bodyDeclarations = createdExtension.bodyDeclarations();
-    setEndPosition(getRewrite().track(bodyDeclarations.get(bodyDeclarations.size() - 1)));
+    setEndPosition(getRewrite().track(bodyDeclarations.getLast()));
   }
 
   protected TypeDeclaration createExtensionType(Type superType) {
